recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:7: error: reassignment to val
	increment = increment + length
                  ^